Revision history for CGI-Info

1.08
	Invalid args could get through if the logger is set

1.07	Sun Sep 14 09:16:12 EDT 2025
	Fix https://ci.appveyor.com/project/nigelhorne/cgi-info-vqpj8/builds/52537979/job/bnag8kvc2htkl3vf

0.106	Thu Aug  7 19:37:56 EDT 2025
	Added bidswitchbot as a bot
	Allow 'St Peter&#39;s' as an argument
	Fix params() to return undef, not a scalar, when blocking an SQL injection
	AUTOLOAD: added sanity check to the method name
	Fix json testing when stdin_data is set
	Only load IO::Interactive when needed
	WAF: Strip unencoded NUL bytes as well as encoded NUL bytes

0.105	Thu Jul 17 15:07:43 EDT 2025
	carp for warning when logger not set
	Flag Google-InspectionTool as a search_engine
	Added "Fuzz Faster U Fool" as a bot
	Also look in SSL_TLS_SNI for hostname
	Allow domain_name() to be called as a class method

0.104	Fri Jun 20 07:41:53 EDT 2025
	Bumped minimum version of Config::Abstraction - and hence removed MD5_CTX workaround code
	Flag Alibaba as a search engine
	Use Object::Configure instead of Class::Debug
	Allow IS_SEARCH_ENGINE and IS_MOBILE to be set in the environment

0.103	Fri May 16 17:48:32 EDT 2025
	Mark Clickagy as a bot
	Don't use notice() since Log::Log4perl doesn't understand it
	Added the cache() method
	Workaround "(in cleanup) Failed to get MD5_CTX pointer" issue
	Enhanced allow parameter with subroutine support

0.102	Thu May  8 21:39:31 EDT 2025
	Use Class::Debug

0.101	Mon May  5 11:09:29 EDT 2025
	Try hard to find the config files - should be in Config::Abstraction
	Called 1.00 to work around version control which things 'dot' is the same as 'decimal point'

0.100	Sat May  3 21:16:56 EDT 2025
	Pave the way for the latest Config::Abstraction

0.99	Wed Apr 23 07:55:03 EDT 2025
	Don't try to read from the terminal when not interactive
	Added t/config.t
	Use Params::Get in new()
	Block SQL injections using /**/ instead of spaces to separate keywords

0.98	Tue Apr 15 13:39:22 EDT 2025
	Allow AUTOLOAD in subclasses