@@ -2,6 +2,8 @@ Revision history for CGI-Info
 
 1.08
 	Invalid args could get through if the logger is set
+	Make get_cookie() just call cookie()
+	Verify the format of the cookie name
 
 1.07	Sun Sep 14 09:16:12 EDT 2025
 	Fix https://ci.appveyor.com/project/nigelhorne/cgi-info-vqpj8/builds/52537979/job/bnag8kvc2htkl3vf
